# PlayUnreal

./: .gitignore  README.md
.dots/: config
.dots/PlayUnreal-impl-tasks-9f1e22cc/: PlayUnreal-add-pytest-fixtures-8c4ca7b1.md  PlayUnreal-build-python-client-f886d4c3.md  PlayUnreal-create-playunrealautomation-2f96669c.md  PlayUnreal-create-sample-ue-774955bc.md  PlayUnreal-expand-docs-and-2b08108d.md  PlayUnreal-impl-tasks-9f1e22cc.md  PlayUnreal-implement-automation-driver-b1773618.md  PlayUnreal-implement-screenshots-and-e4e2e597.md  PlayUnreal-implement-umg-setautomationid-5ea63c3e.md  PlayUnreal-implement-world-and-3d558b5d.md  PlayUnreal-wire-automation-driver-87fc436b.md
.dots/PlayUnreal-research-tasks-a02c6e88/: PlayUnreal-confirm-remote-control-723d5bd2.md  PlayUnreal-confirm-umg-automation-7adc0522.md  PlayUnreal-decide-driver-obj-d53af783.md  PlayUnreal-define-api-err-63485195.md  PlayUnreal-research-tasks-a02c6e88.md  PlayUnreal-validate-automation-driver-d7a26d16.md
.github/workflows/: playunreal-ci.yml
Tools/PlayUnreal/: README.md  build-and-verify.sh  client.py  debug_navigation.py  rc_api_spike.sh  run-tests.sh
ci/: ci_demo_all_features.py  run-ci.sh  setup-runner.sh
examples/sample_project/: README.md  smoke_test.py
examples/tests_e2e/: README.md  conftest.py  test_connection.py  test_evidence.py  test_gameplay.py
protocol/: playunreal-api.md
python/: pyproject.toml
python/playunreal/: README.md  __init__.py  client.py
unreal-plugin/PlayUnrealAutomation/: PlayUnrealAutomation.uplugin  README.md
(+7 files in other folders)
