[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "playunreal"
version = "0.1.0"
description = "Playwright-style automation client for Unreal Engine"
readme = "playunreal/README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["unreal", "automation", "testing", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Games/Entertainment",
]

# Zero pip dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["playunreal*"]
